--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "แทงบอลufabet",
+  "name": "ufabet",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "แทงบอลUFABET ได้เงินแน่ๆ 100% น่าจะเป็นคำตอบที่ดีทีสุดในขณะนี้แล้ว และเป็นเว็บที่เราเชื่อว่าดีที่สุดในประเทศไทยเลยทีเดียว เนื่องจากว่าเรามีทีมงานที่ดี มีมาตรฐานการบริการที่สุดยอด รวดเร็ว และเป็นเว็บที่ให้ราคาน้ำที่สามารถให้นักพนันบอลเข้ามาทำกำไรได้มากที่สุด",
