--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "แทงบอลออนไลน์",
     "เว็บแทงบอลออนไลน์ฝากขั้นต่ำ100"
   ],
-  "repository": "https://github.com/UFAPRO888s/แทงบอลufabet",
+  "repository": "https://github.com/UFAPRO888s/-ufabet",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
